fix(kubernetes): resolve Docker network isolation with --network host - Update registry and test function for OrbStack API access

--- a/mcp_server_registry.yml
+++ b/mcp_server_registry.yml
@@ -127,7 +127,7 @@ servers:
     volumes:
       - "$HOME/.kube:/home/.kube:ro"
     networks:
-      - "mcp-network"
+      - "host"
 
   figma:
     name: "Figma Context MCP Server (GLips)"
