fix: align Rails MCP server with working configuration - Update registry to match working backup exactly with mount_based type and volume mounts, add special protocol handling for Rails server, update test expectations, all tests now passing

--- a/.env_example
+++ b/.env_example
@@ -29,7 +29,13 @@ K8S_CONTEXT=your_k8s_context_here
 K8S_NAMESPACE=your_k8s_namespace_here
 
 # KUBECONFIG for MCP server authentication
-KUBECONFIG=/home/.kube/config
+KUBECONFIG=/root/.kube/config
+
+# RAILS_MCP_CONFIG_HOME for MCP server authentication
+RAILS_MCP_CONFIG_HOME=/Users/user/.config
+
+# RAILS_MCP_ROOT_PATH for MCP server authentication
+RAILS_MCP_ROOT_PATH=/Users/user/Projects
 
 # TERRAFORM_DIR for MCP server authentication
 TERRAFORM_DIR=your_terraform_dir_here
