--- a/support/docker/mcp-server-kubernetes/Dockerfile
+++ b/support/docker/mcp-server-kubernetes/Dockerfile
@@ -8,6 +8,4 @@ RUN make build
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 WORKDIR /app
 COPY --from=builder /app/kubernetes-mcp-server /app/kubernetes-mcp-server
-ENTRYPOINT ["/app/kubernetes-mcp-server", "--sse-port", "8080"]
-
-EXPOSE 8080
+ENTRYPOINT ["/app/kubernetes-mcp-server"]
