--- a/.env_example
+++ b/.env_example
@@ -1,41 +1,34 @@
 # MCP Server Environment Variables
-#
-# Copy this file to .env and replace placeholder values with real API tokens
-# Example: cp .env_example .env
+# Copy this file to .env and set your actual values
 
-
-# CIRCLECI_BASE_URL for MCP server authentication
-CIRCLECI_BASE_URL=your_circleci_base_url_here
-
-# CIRCLECI_TOKEN for MCP server authentication
-CIRCLECI_TOKEN=your_circleci_token_here
-
-# FIGMA_API_KEY for MCP server authentication
-FIGMA_API_KEY=your_figma_api_key_here
-
-# FILESYSTEM_ALLOWED_DIRS for MCP server authentication
-FILESYSTEM_ALLOWED_DIRS=/Users/user/Project,/Users/user/Desktop,/Users/user/Downloads
-
-# GITHUB_PERSONAL_ACCESS_TOKEN for MCP server authentication
+# GitHub MCP Server
 GITHUB_PERSONAL_ACCESS_TOKEN=your_github_personal_access_token_here
 
-# HEROKU_API_KEY for MCP server authentication
+# CircleCI MCP Server
+CIRCLECI_TOKEN=your_circleci_token_here
+CIRCLECI_BASE_URL=https://circleci.com
+
+# Filesystem MCP Server
+FILESYSTEM_ALLOWED_DIRS=/path/to/your/projects,/path/to/other/projects
+
+# Memory Service MCP Server
+MCP_MEMORY_CHROMA_PATH=/path/to/chroma/data
+MCP_MEMORY_BACKUPS_PATH=/path/to/memory/backups
+
+# Kubernetes MCP Server
+KUBECONFIG=/path/to/your/kubeconfig
+K8S_NAMESPACE=default
+K8S_CONTEXT=your_k8s_context
+
+# Figma MCP Server
+FIGMA_API_KEY=your_figma_api_key_here
+
+# Heroku MCP Server
 HEROKU_API_KEY=your_heroku_api_key_here
 
-# K8S_CONTEXT for MCP server authentication
-K8S_CONTEXT=your_k8s_context_here
+# Rails MCP Server
+RAILS_MCP_ROOT_PATH=/path/to/your/rails/projects
+RAILS_MCP_CONFIG_HOME=/path/to/rails/config
 
-# K8S_NAMESPACE for MCP server authentication
-K8S_NAMESPACE=your_k8s_namespace_here
-
-# KUBECONFIG for MCP server authentication
-KUBECONFIG=/root/.kube/config
-
-# RAILS_MCP_CONFIG_HOME for MCP server authentication
-RAILS_MCP_CONFIG_HOME=/Users/user/.config
-
-# RAILS_MCP_ROOT_PATH for MCP server authentication
-RAILS_MCP_ROOT_PATH=/Users/user/Projects
-
-# TERRAFORM_DIR for MCP server authentication
-TERRAFORM_DIR=your_terraform_dir_here
+# Terraform-CLI-Controller MCP Server
+TERRAFORM_HOST_DIR=/path/to/your/terraform/projects
