--- a/mcp_server_registry.yml
+++ b/mcp_server_registry.yml
@@ -81,6 +81,46 @@ servers:
       - "file_metadata"
       - "secure_access"
 
+  memory-service:
+    name: "Memory Service MCP Server"
+    server_type: "mount_based"  # Uses Docker mounts for ChromaDB persistence
+    description: "Persistent memory storage and retrieval using ChromaDB for AI applications"
+    category: "memory"
+    source:
+      type: build
+      repository: https://github.com/doobidoo/mcp-memory-service.git
+      image: local/mcp-server-memory-service:latest
+      build_context: "."
+    environment_variables:
+      - "MCP_MEMORY_CHROMA_PATH"
+      - "MCP_MEMORY_BACKUPS_PATH"
+    volumes:
+      - "~/ChromaDB/db:/app/chroma_db"
+      - "~/ChromaDB/backup:/app/backups"
+    health_test:
+      type: "stdio_jsonrpc"
+      method: "initialize"
+      params:
+        protocolVersion: "2024-11-05"
+        capabilities: {}
+        clientInfo:
+          name: "health_checker"
+          version: "1.0.0"
+      expected_response:
+        jsonrpc: "2.0"
+        result:
+          protocolVersion: "2024-11-05"
+          serverInfo:
+            name: "memory"
+    capabilities:
+      - "memory_storage"
+      - "memory_retrieval"
+      - "content_search"
+      - "tag_based_search"
+      - "time_based_recall"
+      - "memory_management"
+      - "backup_operations"
+
   docker:
     name: "Docker MCP Server"
     server_type: "privileged"
@@ -269,13 +309,15 @@ servers:
       build_context: "."
       cmd: ["mcp"]
     environment_variables:
-      - "TERRAFORM_DIR"
+      - "TERRAFORM_HOST_DIR"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "$HOME/.aws:/root/.aws:ro"
-      - "$HOME/terraform-projects:/workspace"
+      - "$TERRAFORM_HOST_DIR:/workspace"
     networks:
       - "host"
+    container_env:
+      TERRAFORM_DIR: "/workspace/default"
     health_test:
       parse_mode: json
       path: "/health"
