fix: improve test stability and performance across test suite
- Fix all failing integration tests with proper environment isolation and path handling
- Enhance MCP Inspector with Docker availability detection and improved help formatting
- Strengthen test infrastructure with better container lifecycle management and validation
- Improve configuration generation reliability with enhanced templates and error handling
- Fix shellcheck warnings and optimize code quality for better maintainability

--- a/.env_example
+++ b/.env_example
@@ -1,34 +1,44 @@
 # MCP Server Environment Variables
-# Copy this file to .env and set your actual values
+# Generated: Mon Jun 23 18:14:54 CEST 2025
 
-# GitHub MCP Server
+# github server configuration
+
 GITHUB_PERSONAL_ACCESS_TOKEN=your_github_personal_access_token_here
 
-# CircleCI MCP Server
+# circleci server configuration
+
 CIRCLECI_TOKEN=your_circleci_token_here
-CIRCLECI_BASE_URL=https://circleci.com
+CIRCLECI_BASE_URL=your_circleci_base_url_here
 
-# Filesystem MCP Server
-FILESYSTEM_ALLOWED_DIRS=/path/to/your/projects,/path/to/other/projects
+# filesystem server configuration
 
-# Memory Service MCP Server
-MCP_MEMORY_CHROMA_PATH=/path/to/chroma/data
-MCP_MEMORY_BACKUPS_PATH=/path/to/memory/backups
+FILESYSTEM_ALLOWED_DIRS=/Users/user/Project,/Users/user/Desktop,/Users/user/Downloads
 
-# Kubernetes MCP Server
-KUBECONFIG=/path/to/your/kubeconfig
-K8S_NAMESPACE=default
-K8S_CONTEXT=your_k8s_context
+# memory-service server configuration
 
-# Figma MCP Server
+# docker server configuration
+
+# kubernetes server configuration
+
+KUBECONFIG=your_kubeconfig_here
+K8S_NAMESPACE=your_k8s_namespace_here
+K8S_CONTEXT=your_k8s_context_here
+
+# figma server configuration
+
 FIGMA_API_KEY=your_figma_api_key_here
 
-# Heroku MCP Server
+# heroku server configuration
+
 HEROKU_API_KEY=your_heroku_api_key_here
 
-# Rails MCP Server
-RAILS_MCP_ROOT_PATH=/path/to/your/rails/projects
-RAILS_MCP_CONFIG_HOME=/path/to/rails/config
+# terraform server configuration
 
-# Terraform-CLI-Controller MCP Server
-TERRAFORM_HOST_DIR=/path/to/your/terraform/projects
+# rails server configuration
+
+RAILS_MCP_ROOT_PATH=your_rails_mcp_root_path_here
+RAILS_MCP_CONFIG_HOME=your_rails_mcp_config_home_here
+
+# terraform-cli-controller server configuration
+
+TERRAFORM_HOST_DIR=your_terraform_host_dir_here
