--- a/.env_example
+++ b/.env_example
@@ -1,44 +1,67 @@
 # MCP Server Environment Variables
-# Generated: Mon Jun 23 18:14:54 CEST 2025
+# Generated: Mon Jun 23 23:23:29 CEST 2025
 
 # github server configuration
 
-GITHUB_PERSONAL_ACCESS_TOKEN=your_github_personal_access_token_here
 
+server_type=api_based
+env_vars_str='GITHUB_PERSONAL_ACCESS_TOKEN '
+mount_config=null
 # circleci server configuration
 
-CIRCLECI_TOKEN=your_circleci_token_here
-CIRCLECI_BASE_URL=your_circleci_base_url_here
 
+server_type=api_based
+env_vars_str='CIRCLECI_TOKEN CIRCLECI_BASE_URL '
+mount_config=null
 # filesystem server configuration
 
-FILESYSTEM_ALLOWED_DIRS=/Users/user/Project,/Users/user/Desktop,/Users/user/Downloads
 
+server_type=mount_based
+env_vars_str='FILESYSTEM_ALLOWED_DIRS '
+mount_config=null
 # memory-service server configuration
 
+server_type=mount_based
+env_vars_str=''
+mount_config=null
 # docker server configuration
 
+server_type=privileged
+env_vars_str=''
+mount_config=null
 # kubernetes server configuration
 
-KUBECONFIG=your_kubeconfig_here
-K8S_NAMESPACE=your_k8s_namespace_here
-K8S_CONTEXT=your_k8s_context_here
 
+server_type=privileged
+env_vars_str='KUBECONFIG K8S_NAMESPACE K8S_CONTEXT '
+mount_config=null
 # figma server configuration
 
-FIGMA_API_KEY=your_figma_api_key_here
 
+server_type=api_based
+env_vars_str='FIGMA_API_KEY '
+mount_config=null
 # heroku server configuration
 
-HEROKU_API_KEY=your_heroku_api_key_here
 
+server_type=api_based
+env_vars_str='HEROKU_API_KEY '
+mount_config=null
 # terraform server configuration
 
+server_type=standalone
+env_vars_str=''
+mount_config=null
 # rails server configuration
 
-RAILS_MCP_ROOT_PATH=your_rails_mcp_root_path_here
-RAILS_MCP_CONFIG_HOME=your_rails_mcp_config_home_here
 
+server_type=mount_based
+env_vars_str='RAILS_MCP_ROOT_PATH RAILS_MCP_CONFIG_HOME '
+mount_config=null
 # terraform-cli-controller server configuration
 
-TERRAFORM_HOST_DIR=your_terraform_host_dir_here
+
+server_type=privileged
+env_vars_str='TERRAFORM_HOST_DIR '
+mount_config=null
+# sonarqube server configuration
