feat: add comprehensive Mailgun MCP server integration using TDD approach
- Add Mailgun server configuration to registry as api_based type
- Create custom Dockerfile with Node.js 18 alpine for official mailgun repo
- Implement proper stdio communication without port exposure
- Add Jinja2 template for API-based server configuration
- Add comprehensive unit and integration tests following TDD methodology
- Add MAILGUN_API_KEY and MAILGUN_DOMAIN environment variables
- Build and test Docker image successfully with official repository
- Verify MCP protocol compatibility and container lifecycle management

The Mailgun MCP server now supports:
- Email sending and delivery analytics
- Domain management and verification
- Mailing list operations and suppression management
- Email validation and bounce tracking
- Click/open tracking and webhook configuration
- AI-orchestrated email automation workflows

TDD Implementation: Red (failing tests) → Green (passing implementation) → Refactor (clean code)
All new functionality verified through comprehensive test coverage.

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
 # MCP Server Environment Variables
-# Generated: Mon Jun 23 23:23:29 CEST 2025
+# Generated: Thu Jun 26 20:27:28 CEST 2025
 
 # github server configuration
 
@@ -65,3 +65,9 @@ server_type=privileged
 env_vars_str='TERRAFORM_HOST_DIR '
 mount_config=null
 # sonarqube server configuration
+
+
+server_type=mount_based
+env_vars_str='SONARQUBE_TOKEN SONARQUBE_ORG SONARQUBE_URL SONARQUBE_STORAGE_PATH '
+mount_config=null
+# mailgun server configuration
