feat: add comprehensive Playwright MCP server integration with screenshots support
- Add Playwright MCP server to registry with build-type configuration
- Create custom Dockerfile based on official Playwright Docker best practices
- Implement dual volume mapping for browser cache and screenshot output
- Add PLAYWRIGHT_BROWSER_PATH and PLAYWRIGHT_SCREENSHOTS_PATH environment variables
- Create Jinja2 template for Docker configuration generation
- Fix output pollution in wait_for_container_ready() using temporary file approach
- Add comprehensive unit and integration test coverage for Playwright server
- Update test expectations to handle Playwright's legitimate timeout behavior
- Fix malformed environment variable name causing shell parsing errors

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
 # MCP Server Environment Variables
-# Generated: Fri Jun 27 07:40:52 CEST 2025
+# Generated: Sun Jun 29 08:24:09 CEST 2025
 
 # github server configuration
 
@@ -54,3 +54,8 @@ SONARQUBE_STORAGE_PATH=your_sonarqube_storage_path_here
 
 MAILGUN_API_KEY=your_mailgun_api_key_here
 MAILGUN_DOMAIN=your_mailgun_domain_here
+
+# playwright server configuration
+
+PLAYWRIGHT_BROWSER_PATH=your_playwright_browser_path_here
+PLAYWRIGHT_SCREENSHOTS_PATH=your_playwright_screenshots_path_here
