fix: apply pre-commit formatting fixes
- Add missing newlines to files (end-of-file-fixer)
- Ensure proper file formatting for all new files

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
 # MCP Server Environment Variables
-# Generated: Sun Jun 29 08:24:09 CEST 2025
+# Generated: Mon Jun 30 12:22:30 CEST 2025
 
 # github server configuration
 
@@ -59,3 +59,12 @@ MAILGUN_DOMAIN=your_mailgun_domain_here
 
 PLAYWRIGHT_BROWSER_PATH=your_playwright_browser_path_here
 PLAYWRIGHT_SCREENSHOTS_PATH=your_playwright_screenshots_path_here
+
+# obsidian server configuration
+
+OBSIDIAN_API_KEY=your_obsidian_api_key_here
+OBSIDIAN_BASE_URL=your_obsidian_base_url_here
+OBSIDIAN_VERIFY_SSL=your_obsidian_verify_ssl_here
+OBSIDIAN_ENABLE_CACHE=your_obsidian_enable_cache_here
+MCP_TRANSPORT_TYPE=your_mcp_transport_type_here
+MCP_LOG_LEVEL=your_mcp_log_level_here
