fix: update Obsidian environment variable placeholders to match protocol
- Set OBSIDIAN_BASE_URL to https://host.docker.internal:27124 (macOS specific)
- Set OBSIDIAN_VERIFY_SSL to false for self-signed local certificates
- Set OBSIDIAN_ENABLE_CACHE to true to enable global search capabilities
- Set MCP_TRANSPORT_TYPE to stdio and MCP_LOG_LEVEL to debug as defaults
- Update unit test expectations to match actual values vs generic placeholders

This ensures the implementation exactly matches the established protocol from
the previous implementation that was lost during branch switching.

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,5 @@
 # MCP Server Environment Variables
-# Generated: Mon Jun 30 12:22:30 CEST 2025
+# Generated: Mon Jun 30 12:29:45 CEST 2025
 
 # github server configuration
 
@@ -63,8 +63,8 @@ PLAYWRIGHT_SCREENSHOTS_PATH=your_playwright_screenshots_path_here
 # obsidian server configuration
 
 OBSIDIAN_API_KEY=your_obsidian_api_key_here
-OBSIDIAN_BASE_URL=your_obsidian_base_url_here
-OBSIDIAN_VERIFY_SSL=your_obsidian_verify_ssl_here
-OBSIDIAN_ENABLE_CACHE=your_obsidian_enable_cache_here
-MCP_TRANSPORT_TYPE=your_mcp_transport_type_here
-MCP_LOG_LEVEL=your_mcp_log_level_here
+OBSIDIAN_BASE_URL=https://host.docker.internal:27124
+OBSIDIAN_VERIFY_SSL=false
+OBSIDIAN_ENABLE_CACHE=true
+MCP_TRANSPORT_TYPE=stdio
+MCP_LOG_LEVEL=debug
