fix: merge consecutive RUN instructions in Obsidian Dockerfile
Consolidated multiple RUN instructions into a single RUN command to reduce
Docker image layers and address SonarQube code smell S7031

--- a/support/docker/obsidian/Dockerfile
+++ b/support/docker/obsidian/Dockerfile
@@ -4,18 +4,14 @@ FROM node:23-alpine
 
 WORKDIR /usr/src/app
 
-# Install git for cloning repository
-RUN apk add --no-cache git
-
-# Clone and build the Obsidian MCP server
-RUN git clone https://github.com/cyanheads/obsidian-mcp-server.git . && \
+# Install dependencies, clone repository, build, and set up user
+RUN apk add --no-cache git && \
+    git clone https://github.com/cyanheads/obsidian-mcp-server.git . && \
     npm ci && \
     npm run build && \
     npm ci --only=production && \
-    rm -rf .git
-
-# Create logs directory with proper permissions
-RUN mkdir -p /usr/src/app/logs && \
+    rm -rf .git && \
+    mkdir -p /usr/src/app/logs && \
     addgroup -S appgroup && \
     adduser -S appuser -G appgroup && \
     chown -R appuser:appgroup /usr/src/app
