feat: add non-root user security to remaining MCP server Dockerfiles
Implements non-root user (UID/GID 1001) security across 5 additional MCP server containers:

- mcp-inspector: Add appuser for npm/Docker CLI access
- terraform-cli-controller: Add appuser for tfmcp binary access
- heroku: Add appuser for Heroku CLI and Node.js access
- mcp-server-rails: Add appuser for Rails gem system access
- mcp-server-circleci: Add appuser in multi-stage build with proper ownership

All containers now follow Docker security best practices by running as non-root users while maintaining full functionality. Comprehensive testing confirms no regressions in MCP protocol communication or tool accessibility.

Security improvements verified via:
- JSON-RPC protocol validation for all servers
- Manual functional testing of all 15 MCP servers
- Container lifecycle and permission verification

--- a/support/docker/heroku/Dockerfile
+++ b/support/docker/heroku/Dockerfile
@@ -47,5 +47,13 @@ RUN echo "=== Final verification ===" && \
     heroku version && \
     echo "=== All checks passed ==="
 
+# Create non-root user for security
+RUN addgroup -g 1001 -S appgroup && \
+    adduser -u 1001 -S appuser -G appgroup -h /app && \
+    chown -R appuser:appgroup /app
+
+# Switch to non-root user
+USER appuser
+
 # Use the correct entrypoint as specified in PR #67
 ENTRYPOINT ["node", "bin/heroku-mcp-server.mjs"]
