--- a/support/docker/mcp-server-circleci/Dockerfile
+++ b/support/docker/mcp-server-circleci/Dockerfile
@@ -23,9 +23,18 @@ RUN pnpm run build
 FROM node:lts-alpine
 ENV NODE_ENV=production
 WORKDIR /app
-COPY --from=prod-deps /app/node_modules /app/node_modules
-COPY --from=build /app/dist /app/dist
-COPY package.json ./
+
+# Create non-root user for security
+RUN addgroup -g 1001 -S appgroup && \
+    adduser -u 1001 -S appuser -G appgroup -h /app && \
+    chown -R appuser:appgroup /app
+
+COPY --from=prod-deps --chown=appuser:appgroup /app/node_modules /app/node_modules
+COPY --from=build --chown=appuser:appgroup /app/dist /app/dist
+COPY --chown=appuser:appgroup package.json ./
+
+# Switch to non-root user
+USER appuser
 
 # Command to run the MCP server
 ENTRYPOINT ["node", "dist/index.js"]
