fix: resolve SonarQube security hotspots for Docker file permissions
Addresses 6 High priority security hotspots (docker:S6504) by implementing
proper file permission separation in MCP server containers:

Security improvements:
- Remove --chown=appuser:appgroup from COPY commands (prevents write access)
- Copy application files as root (read-only for application user)
- Only grant write permissions to specific directories (tmp, logs, config)
- Use explicit chmod to set proper file permissions (755 for dirs, 644 for files)

Affected containers:
- mcp-server-circleci: Fixed node_modules and dist permissions
- heroku: Fixed application file ownership
- mcp-server-rails: Fixed gem and config directory permissions
- mcp-inspector: Fixed application directory permissions
- terraform-cli-controller: Fixed binary ownership and working directories

This follows Docker security best practices by ensuring the principle of least
privilege - application users can only write to necessary directories while
application code remains read-only.

Verified: All containers still pass MCP protocol validation tests.

--- a/support/docker/heroku/Dockerfile
+++ b/support/docker/heroku/Dockerfile
@@ -50,7 +50,10 @@ RUN echo "=== Final verification ===" && \
 # Create non-root user for security
 RUN addgroup -g 1001 -S appgroup && \
     adduser -u 1001 -S appuser -G appgroup -h /app && \
-    chown -R appuser:appgroup /app
+    mkdir -p /app/tmp /app/logs && \
+    chown appuser:appgroup /app/tmp /app/logs && \
+    chmod 755 /app/src /app/dist /app/bin /app/node_modules && \
+    chmod 644 /app/package.json /app/package-lock.json /app/tsconfig.json
 
 # Switch to non-root user
 USER appuser
