--- a/support/docker/mcp-server-circleci/Dockerfile
+++ b/support/docker/mcp-server-circleci/Dockerfile
@@ -24,14 +24,18 @@ FROM node:lts-alpine
 ENV NODE_ENV=production
 WORKDIR /app
 
+# Copy application files as root (read-only for security)
+COPY --from=prod-deps /app/node_modules /app/node_modules
+COPY --from=build /app/dist /app/dist
+COPY package.json ./
+
 # Create non-root user for security
 RUN addgroup -g 1001 -S appgroup && \
     adduser -u 1001 -S appuser -G appgroup -h /app && \
-    chown -R appuser:appgroup /app
-
-COPY --from=prod-deps --chown=appuser:appgroup /app/node_modules /app/node_modules
-COPY --from=build --chown=appuser:appgroup /app/dist /app/dist
-COPY --chown=appuser:appgroup package.json ./
+    mkdir -p /app/tmp /app/logs && \
+    chown appuser:appgroup /app/tmp /app/logs && \
+    chmod 755 /app/node_modules /app/dist && \
+    chmod 644 /app/package.json
 
 # Switch to non-root user
 USER appuser
