feat: add AppSignal MCP server with complete integration
- Add AppSignal MCP server to registry with build configuration
- Create Dockerfile and template for AppSignal integration
- Add APPSIGNAL_API_KEY environment variable to .env_example
- Implement comprehensive unit and integration tests
- Fix output pollution in test commands by preventing temp_logs variable assignment leakage
- Update integration test expectations for stdout/stderr output patterns

AppSignal provides exception tracking, incident management, and performance monitoring capabilities through their MCP server.

Tested with Docker container lifecycle and MCP protocol validation.
Unit tests: 52 examples, 0 failures
Core functionality verified and working correctly.

--- a/mcp_server_registry.yml
+++ b/mcp_server_registry.yml
@@ -26,6 +26,26 @@ servers:
       - "pull_requests"
       - "code_search"
 
+  appsignal:
+    name: "AppSignal MCP Server"
+    server_type: "api_based"  # Uses environment variables for API authentication
+    description: "AppSignal application performance monitoring and error tracking"
+    category: "monitoring"
+    source:
+      type: build
+      image: "local/appsignal-mcp-server:latest"
+      dockerfile: "support/docker/appsignal/Dockerfile"
+      repository: "https://github.com/appsignal/appsignal-mcp"
+    environment_variables:
+      - "APPSIGNAL_API_KEY"
+    placeholders:
+      APPSIGNAL_API_KEY: "your_appsignal_api_key_here"
+    features:
+      - "exception_tracking"
+      - "incident_management"
+      - "namespace_filtering"
+      - "performance_monitoring"
+
   circleci:
     name: CircleCI MCP Server
     server_type: "api_based"  # Uses environment variables for API authentication
