feat: add Recraft MCP server for AI image generation
- Add Recraft server configuration to mcp_server_registry.yml
- Configure as mount_based server type for local image storage
- Support both local and remote image storage modes
- Add volume mapping for IMAGE_STORAGE_DIRECTORY
- Create optimized multi-stage Dockerfile with security best practices
- Add Jinja2 template with volume support
- Add RECRAFT_API_KEY, IMAGE_STORAGE_DIRECTORY, and RECRAFT_REMOTE_RESULTS_STORAGE to env handling
- Implement proper health checks and protocol validation
- Server provides 9 tools for image generation, transformation, and manipulation

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,4 @@
 # MCP Server Environment Variables
-# Generated: Sat Jul  5 15:19:31 CEST 2025
 
 # github server configuration
 
@@ -72,3 +71,7 @@ OBSIDIAN_VERIFY_SSL=false
 OBSIDIAN_ENABLE_CACHE=true
 
 # linear server configuration
+
+# recraft server configuration
+
+RECRAFT_API_KEY=your_recraft_api_key_here
