--- a/mcp_server_registry.yml
+++ b/mcp_server_registry.yml
@@ -552,6 +552,52 @@ servers:
       - "comment_management"
       - "status_management"
 
+  recraft:
+    name: "Recraft MCP Server"
+    server_type: "mount_based"
+    description: "AI-powered image generation and manipulation via Recraft AI"
+    category: "ai_image"
+    source:
+      type: build
+      image: "local/recraft-mcp-server:latest"
+      dockerfile: "support/docker/recraft/Dockerfile"
+      repository: "https://github.com/recraft-ai/mcp-recraft-server.git"
+      build_context: "."
+    environment_variables:
+      - "RECRAFT_API_KEY"
+      - "IMAGE_STORAGE_DIRECTORY"
+      - "RECRAFT_REMOTE_RESULTS_STORAGE"
+    placeholders:
+      RECRAFT_API_KEY: "your_recraft_api_key_here"
+      IMAGE_STORAGE_DIRECTORY: "${HOME}/recraft-images"
+      RECRAFT_REMOTE_RESULTS_STORAGE: "0"
+    volumes:
+      - "${IMAGE_STORAGE_DIRECTORY}:${IMAGE_STORAGE_DIRECTORY}"
+    health_test:
+      type: "stdio_jsonrpc"
+      method: "initialize"
+      params:
+        protocolVersion: "2024-11-05"
+        capabilities: {}
+        clientInfo:
+          name: "health_checker"
+          version: "1.0.0"
+      expected_response:
+        jsonrpc: "2.0"
+        result:
+          protocolVersion: "2024-11-05"
+          serverInfo:
+            name: "mcp-recraft-server"
+    capabilities:
+      - "image_generation"
+      - "style_creation"
+      - "image_vectorization"
+      - "image_transformation"
+      - "background_removal"
+      - "background_replacement"
+      - "image_upscaling"
+      - "user_info"
+
 # Global MCP configuration
 global:
   build_directory: "./mcp_builds"
