test: update integration test for 19 configured servers
- Update MCP inspector test to expect 19 servers instead of 18
- Account for newly added recraft server in test expectations
- Add IMAGE_STORAGE_DIRECTORY and RECRAFT_REMOTE_RESULTS_STORAGE to .env_example

--- a/.env_example
+++ b/.env_example
@@ -75,3 +75,5 @@ OBSIDIAN_ENABLE_CACHE=true
 # recraft server configuration
 
 RECRAFT_API_KEY=your_recraft_api_key_here
+IMAGE_STORAGE_DIRECTORY=/Users/gfichtner/recraft-images
+RECRAFT_REMOTE_RESULTS_STORAGE=0
